--- a/BarcodeSDK.NET.Droid.Example/BarcodeSDK.NET.Droid.Example.csproj
+++ b/BarcodeSDK.NET.Droid.Example/BarcodeSDK.NET.Droid.Example.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net8.0-android</TargetFramework>
+        <TargetFramework>net9.0-android</TargetFramework>
         <SupportedOSPlatformVersion>21.0</SupportedOSPlatformVersion>
         <OutputType>Exe</OutputType>
         <Nullable>disable</Nullable>
@@ -14,9 +14,7 @@
         <MtouchLink>SdkOnly</MtouchLink>
         <WarningsAsErrors>NU1603</WarningsAsErrors>
     </PropertyGroup>
-    
     <ItemGroup>
-         <!-- <PackageReference Include="ScanbotBarcodeSDK.NET" Version="6.1.0" /> -->
-         <ProjectReference Include="../../scanbot-sdk-maui/BarcodeSDK/BarcodeSDK.NET.Droid/BarcodeSDK.NET.Droid.csproj" />
+      <PackageReference Include="ScanbotBarcodeSDK.NET" Version="7.0.0-alpha.2" />
     </ItemGroup>
 </Project>
