--- a/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
+++ b/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFrameworks>net8.0-ios;net8.0-android</TargetFrameworks>
+        <TargetFrameworks>net9.0-ios;net9.0-android</TargetFrameworks>
         <OutputType>Exe</OutputType>
         <RootNamespace>ScanbotSDK.MAUI.Example</RootNamespace>
         <UseMaui>true</UseMaui>
@@ -22,13 +22,6 @@
         <WarningsAsErrors>NU1603</WarningsAsErrors>
         <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
     </PropertyGroup>
-
-     <PropertyGroup Condition="$(TargetFramework.Contains('ios'))">
-        <RuntimeIdentifier Condition="'$(RuntimeIdentifier)' == ''">ios-arm64</RuntimeIdentifier>
-        <RuntimeIdentifier Condition="'$(RuntimeIdentifier)' == 'iossimulator-arm64'">iossimulator-x64</RuntimeIdentifier>
-        <ForceSimulatorX64ArchitectureInIDE>true</ForceSimulatorX64ArchitectureInIDE>
-    </PropertyGroup>
-
     <ItemGroup>
         <!-- App Icon -->
         <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
@@ -48,8 +41,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <!-- <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="6.1.0" /> -->
-        <ProjectReference Include="../../scanbot-sdk-maui/BarcodeSDK/BarcodeSDK.MAUI/BarcodeSDK.MAUI.csproj" />
-        <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.*" />
+      <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="7.0.0-alpha.1" />
     </ItemGroup>
 </Project>
