--- a/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
+++ b/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
@@ -39,8 +39,7 @@
         <!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
         <MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
     </ItemGroup>
-
     <ItemGroup>
-      <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="7.0.0-alpha.1" />
+      <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="7.0.0-local-maui.70" />
     </ItemGroup>
 </Project>
