--- a/BarcodeSDK.NET.Droid.Example/BarcodeSDK.NET.Droid.Example.csproj
+++ b/BarcodeSDK.NET.Droid.Example/BarcodeSDK.NET.Droid.Example.csproj
@@ -15,6 +15,6 @@
         <WarningsAsErrors>NU1603</WarningsAsErrors>
     </PropertyGroup>
     <ItemGroup>
-      <PackageReference Include="ScanbotBarcodeSDK.NET" Version="7.0.0-alpha.7" />
+      <PackageReference Include="ScanbotBarcodeSDK.NET" Version="7.0.0-rc.1" />
     </ItemGroup>
 </Project>
